@@ -108,6 +108,7 @@ sub new {
 			'acquire::*::proxy',
 			'acquire::*::*::dl-limit',
 			'acquire::*::dl-limit',
+			'acquire::*::*::timeout',
 			'acquire::*::timeout',
 			'dpkg::tools::options::*',
 			'dpkg::tools::options::*::*',
