@@ -1,7 +1,6 @@
 For version 0.2:
 
 doc: write tutorial
-downloader, config: support per-host acquire settings
 cupt, worker, resolver: reasoning for installing/removing packages (-D option)
 cupt, worker: implement 'update' action
 
